# RAGaroo

./: README.md
Advanced-RAG/: README.md  dummydata.json  imops_bbox.py  imops_chart.py  imops_document_loader.py  imops_embedding.py  imops_llm.py  imops_prompts.py  imops_retrieve.py  imops_splitter.py  pyproject.toml  ragBaseline.py  upstageDP.py
Advanced-RAG/data/: all_documents.json
Advanced-RAG/data/parsed_pdf/: iM뱅크 셀프창구 서비스 설명서.json  iM뱅크 퀵 서비스 설명서.json  계좌이동서비스 설명서.json  상품설명서_iM국민연금안심통장.json  상품설명서_매일플러스기업통장.json  상품설명서_양도성예금증서.json  상품설명서_파랑새적금.json  전자금융 서비스 설명서.json  중진공 정책자금 전용통장_상품설명서.json  퇴직연금용정기예금(만기지급형)_상품설명서.json
Advanced-RAG/data/user_data/id_1/id_11/: evaluation_results.json  references.json
backend/: .gitignore  build.gradle  dockerfile  settings.gradle
platform/: .gitignore  LICENSE  README.md  package-lock.json  package.json
platform/pdf/parsed_data/: all_documents.json
platform/src/: App.css  App.js  README.md  _dummyData.js  dummyData.js  index.css
platform/src/components/: README.md  iMOpsPlatform.css  iMOpsPlatform.js
platform/src/components/common/: Header.css  Layout.js  LayoutForHistory.css  LayoutForHistory.js  QnALayout.css  QnALayout.js  Sidebar.css  Sidebar.js  SidebarForHistory.js
platform/src/components/history/: RAGExperimentDetail.css  RAGExperimentDetail.jsx  RAGExperimentsList.css  RAGExperimentsList.jsx  RAGHistory.css  RAGHistory.jsx  README.md
platform/src/components/lab/: APIKey.css  APIKey.js  Embedding.css  Embedding.js  LLMParamsPrompt.css  PDFParse.css  (+7 more)
platform/src/dummyLab/: id_1-id_11-eval.json
(+63 files in other folders)
